tests/miniJava/neg/000131_mutation.MiniJava
class java { public public void Main ( String [ ] java ) { { } } }
